--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,9 @@ version = "0.1.0"
 [deps]
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[compat]
+Literate = "2.20.1"
